# FFLv2-lib

./: CMakeLists.txt
cmakemode/: FFLv2IOSX64.cmake  FFLv2Utils.cmake
example/: CMakeLists.txt  fdevent.cpp  httpClient.cpp  httpServer.cpp  logSender.cpp  logServer.cpp  main.cpp  memoryLeak.cpp  serverMain.cpp  websocketClient.cpp  websocketServer.cpp
include/: FFL.h  FFL_Assert.h  FFL_Atomic.h  FFL_BlockList.hpp  FFL_ByteBuffer.hpp  FFL_ByteStream.hpp  FFL_ByteWriter.hpp  FFL_CommandHelper.h  FFL_Commandline.h  FFL_Config.h  FFL_Console.hpp  FFL_Core.h  FFL_Dictionary.hpp  FFL_Error.h  FFL_File.hpp  FFL_Initialize.h  FFL_Io.hpp  FFL_Kernel.h  FFL_Loadmodule.h  FFL_Log.h  FFL_Memory.h  FFL_Module.hpp  FFL_Netlib.h  FFL_Netlib.hpp  FFL_OS.h  FFL_Path.h  FFL_Platform.h  FFL_RefBase.hpp  FFL_SharedBuffer.hpp  FFL_String.hpp  FFL_Thread.hpp  FFL_Time.h  FFL_Utility.h  FFL_Version.h  FFL_lib.h  FFL_lib.hpp  FFLv2.hpp  config-android.h  config-mac.h  config-window.h
include/helper/: FFL_LogSender.hpp  FFL_NodeBase.hpp
include/logsender/: FFL_LogSender.hpp  FFL_LogSenderType.hpp
include/net/: FFL_Net.h  FFL_NetConnect.hpp  FFL_NetConnectManager.hpp  FFL_NetEventLoop.hpp  FFL_NetServer.hpp  FFL_NetSocket.hpp  FFL_NetStream.hpp  FFL_NetTcpServer.hpp  FFL_NetUtils.hpp  FFL_TcpClient.hpp  FFL_TcpListener.hpp  FFL_TcpServer.hpp  FFL_UdpClient.hpp  FFL_UdpServer.hpp
include/net/base/: FFL_Net.h  FFL_NetConst.h
include/net/http/: FFL_Http.hpp  FFL_HttpClient.hpp  FFL_HttpClientAccess.hpp  FFL_HttpConnHandle.hpp  FFL_HttpConnManager.hpp  FFL_HttpConnect.hpp  FFL_HttpHeader.hpp  FFL_HttpParser.hpp  FFL_HttpRequest.hpp  FFL_HttpRequestBuilder.hpp  FFL_HttpResponse.hpp  FFL_HttpResponseBuilder.hpp  FFL_HttpResponseFile.hpp  FFL_HttpServer.hpp  FFL_HttpStreamCallback.hpp  FFL_HttpTransportBase.hpp  FFL_HttpUrl.hpp
include/net/websocket/: FFL_WebSocketClient.hpp  FFL_WebSocketServer.hpp
include/pipeline/: FFL_NodeBase.hpp  FFL_Pipeline.hpp  FFL_PipelineAsyncConnector.hpp  FFL_PipelineAsyncConnectorFixedsize.hpp  FFL_PipelineConnector.hpp  FFL_PipelineDefined.hpp  FFL_PipelineEvent.hpp  FFL_PipelineEventCallback.hpp  FFL_PipelineEventFilter.hpp  FFL_PipelineHandler.hpp  FFL_PipelineInput.hpp  FFL_PipelineInputHandler.hpp  FFL_PipelineLooper.hpp  FFL_PipelineMessage.hpp  FFL_PipelineMessageCache.hpp  FFL_PipelineNode.hpp  FFL_PipelineNodeHandler.hpp  FFL_PipelineNodeParser.hpp  FFL_PipelineOutput.hpp  FFL_PipelineSourceConnector.hpp
include/ref/: FFL_Ref.hpp  FFL_RefAtomic.hpp  FFL_RefBase.hpp  FFL_RefCount.hpp  FFL_RefSp.hpp  FFL_RefWeakimpl.hpp  FFL_RefWp.hpp
include/thread/: FFL_Coroutine.hpp  FFL_Mutex.h  FFL_Mutex.hpp  FFL_SysMessage.hpp  FFL_Thread.h  FFL_Thread.hpp  FFL_threadpool.h
include/utils/: FFL_BlockList.hpp  FFL_ByteBuffer.hpp  FFL_ByteReader.hpp  FFL_ByteStream.hpp  FFL_ByteWriter.hpp  FFL_Clock.hpp  FFL_Dictionary.hpp  FFL_File.hpp  FFL_Flags.hpp  FFL_Handler.hpp  FFL_HandlerManager.hpp  FFL_Io.hpp  FFL_List.hpp  FFL_Looper.hpp  FFL_Map.hpp  FFL_MemoryWatch.hpp  FFL_Message.hpp  FFL_MessageQueue.hpp  FFL_Module.hpp  FFL_Serializable.hpp  FFL_Singleton.hpp  FFL_String.hpp  FFL_StringHelper.hpp  FFL_Utils.hpp  FFL_Vector.hpp
source/: FFL_Base64.cpp  FFL_ByteBuffer.cpp  FFL_ByteStream.cpp  FFL_CommandHelper.c  FFL_Commandline.c  FFL_Console.c  FFL_Console.cpp  FFL_Core.c  FFL_Dictionary.cpp  FFL_Error.c  FFL_File.cpp  FFL_Initialize.c  FFL_Kernel.c  FFL_Loadmodule.c  FFL_Log.c  FFL_Memory.c  FFL_Module.cpp  FFL_Path.c  FFL_SharedBuffer.cpp  FFL_String.cpp  FFL_Time.c  FFL_Utility.c  FFL_Version.c  internalLogConfig.h  linux_time.c  memory.c  memoryLeak.c  sysFile.c  sysFile.h  window_time.c
source/atomic/: FFL_Atomic.c  atomic.h
source/helper/: FFL_LogSender.cpp  FFL_NodeBase.cpp
source/logsender/: FFL_LogSender.cpp  LogCollector.cpp  LogCollector.hpp  LogMessageId.hpp  LogMessages.hpp  LogPipeline.cpp  LogPipeline.hpp  LogReader.cpp  LogReader.hpp  LogUploader.cpp  LogUploader.hpp  LogWriterCreator.cpp  LogWriterCreator.hpp
source/net/: FFL_NetConnect.cpp  FFL_NetConnectManager.cpp  FFL_NetEventLoop.cpp  FFL_NetServer.cpp  FFL_NetSocket.cpp  FFL_NetStream.cpp  FFL_NetTcpServer.cpp  FFL_NetUtils.cpp  FFL_SocketPair.cpp  FFL_SocketPair.hpp  FFL_TcpClient.cpp  FFL_TcpListener.cpp  FFL_TcpServer.cpp  FFL_UdpClient.cpp  FFL_UdpServer.cpp
source/net/base/: FFL_Net.c  FFL_NetAnyAddrServer.c  FFL_NetClientConnect.c  FFL_NetLoopbackClient.c  FFL_NetLoopbackServer.c  FFL_select.c  internalSocket.h
source/net/http/: FFL_HttpClient.cpp  FFL_HttpClientAccess.cpp  FFL_HttpConnHandle.cpp  FFL_HttpConnManager.cpp  FFL_HttpConnect.cpp  FFL_HttpFileResponse.cpp  FFL_HttpHeader.cpp  FFL_HttpParser.cpp  FFL_HttpRequest.cpp  FFL_HttpRequestBuilder.cpp  FFL_HttpResponse.cpp  FFL_HttpResponseBuilder.cpp  FFL_HttpResponseFile.cpp  FFL_HttpServer.cpp  FFL_HttpTransportBase.cpp  FFL_HttpUrl.cpp  httpParserImpl.cpp  httpParserImpl.hpp  (+2 more)
source/pipeline/: FFL_NodeBase.cpp  FFL_Pipeline.cpp  FFL_PipelineAsyncConnector.cpp  FFL_PipelineAsyncConnectorFixedSize.cpp  FFL_PipelineConnector.cpp  FFL_PipelineEvent.cpp  FFL_PipelineHandler.cpp  FFL_PipelineInput.cpp  FFL_PipelineLooper.cpp  FFL_PipelineMessage.cpp  FFL_PipelineMessageCache.cpp  FFL_PipelineNode.cpp  FFL_PipelineNodeHandler.cpp  FFL_PipelineNodeManager.cpp  FFL_PipelineNodeManager.hpp  FFL_PipelineNodeParser.cpp  FFL_PipelineOutput.cpp  FFL_PipelineSourceConnector.cpp  PipelineInputList.cpp  PipelineInputList.hpp  PipelineLooper.cpp  PipelineLooper.hpp  PipelineMessageTrackFile.cpp  PipelineMessageTrackFile.hpp  PipelineOutputList.cpp  PipelineOutputList.hpp
source/ref/: FFL_RefBase.cpp  FFL_RefWakeimpl.cpp
source/thread/: FFL_Coroutine.cpp  FFL_Mutex.cpp  FFL_Thread.cpp  FFL_Threadpool.c  FFL_thread.c
source/utils/: FFL_ByteBuffer.cpp  FFL_ByteStream.cpp  FFL_Clock.cpp  FFL_Dictionary.cpp  FFL_File.cpp  FFL_Flags.cpp  FFL_Handler.cpp  FFL_HandlerManager.cpp  FFL_Looper.cpp  FFL_MemoryWatch.cpp  FFL_Message.cpp  FFL_MessageQueue.cpp  FFL_Module.cpp  FFL_Serializable.cpp  FFL_Singleton.cpp  FFL_String.cpp
(+27 files in other folders)
